# data-science-projects

./: .gitignore  LICENSE  README.md  create_notebook.py  init.ps1  pyproject.toml  setup.ps1
house-price-prediction/: README.md  main.py
house-price-prediction/data/: data-dictionary.md
house-price-prediction/models/: linear_regression.pkl
house-price-prediction/notebooks/: housing_pipeline.ipynb
house-price-prediction/script/: train_model.py
house-price-prediction/src/: train.py
house_price_prediction/: README.md
house_price_prediction/notebooks/: exploration.ipynb
house_price_prediction/src/: train.py
loan_default_prediction/: FUTURE_IMPROVEMENTS.txt  README.md  app.py  guideline.md
loan_default_prediction/docs/: data-dictionary.md
loan_default_prediction/notebooks/: exploration.ipynb
loan_default_prediction/src/: train.py
loan_default_prediction/todos/: phase1_config_and_loading.md  phase2_eda.md  phase3_feature_engineering.md  phase4_model_training.md  phase5_hyperparameter_tuning.md  phase6_evaluation.md  phase7_gradio.md  phase8_documentation.md
