[project]
name = "data-science-projects"
version = "0.1.0"
description = "A collection of end-to-end data science projects showcasing ML workflows, from EDA to model training."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
    "gradio>=6.8.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    "loan_default_prediction",
]
